--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-octype html>
+<!doctype html>
 <html lang="en">
 <head>
 
@@ -102,6 +102,7 @@ octype html>
             font-family: 'Gowun Dodum', sans-serif;
         }
 
+
         .card {
             height: 400px;
             margin: 20px;
@@ -112,6 +113,13 @@ octype html>
             width: 100%;
             height: 100%;
             position: relative;
+        }
+        .buttonbox {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: end;
+            margin: 10px;
         }
     </style>
 
@@ -135,6 +143,11 @@ octype html>
                 }
             })
         }
+         function logout(){
+        $.removeCookie('mytoken');
+        alert('로그아웃!')
+        window.location.href='/login'
+      }
     </script>
 
 </head>
@@ -146,6 +159,9 @@ octype html>
             <h3 class="subtitle is-sparta">더 재밌게 살자!</h3>
         </div>
     </section>
+    <div class="buttonbox">
+        <button class="button is-danger" onclick="logout()">로그아웃하기</button>
+    </div>
     {% if videos is not none %}
         <div class="card-box">
             <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -220,6 +236,7 @@ octype html>
                 onclick='$("#video-post").removeClass("is-active")'></button>
     </div>
     <button class="writebtn" onclick='$("#video-post").addClass("is-active")'>추가하기</button>
+
 </div>
 
 </body>
