--- a/login.html
+++ b/login.html
@@ -13,25 +13,35 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <!-- Font Awesome CSS -->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap" rel="stylesheet">
         <!-- JS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
         <style>
             body {
-                background-color: RGBA(232, 52, 78, 0.2);
+                background-color: #fff7cb;
                 min-height: 100vh;
+            }
+            .titlebox {
+                width: 100%;
+                height: 200px;
+                background-color: #fffee2;
+
             }
 
             .section {
                 padding: 1rem 1.5rem;
                 max-width: 750px;
                 margin: auto;
+                margin-top: 20px;
             }
 
             .title {
                 font-weight: 800;
                 font-size: 5rem;
+                color: #ff6d0a;
+                font-family: 'Nuosu SIL', serif;
+
             }
 
             .subtitle {
@@ -43,20 +53,34 @@
             }
 
             .button.is-sparta {
-                background-color: #e8344e;
+                background-color: #ffe9a4;
                 border-color: transparent;
-                color: #fff !important;
+                border-radius: 20px;
+                color: dimgray !important;
+                font-size: 13px;
+
+            }
+
+             .button.is-sparta1 {
+                background-color: #ffe9a4;
+                border-color: transparent;
+
+                color: dimgray !important;
             }
 
             .button.is-sparta.is-outlined {
                 background-color: transparent;
-                border-color: #e8344e;
-                color: #e8344e !important;
+                border-color: #ffe9a4;
+                color: #ff9202 !important;
+            }
+            .button.is-sparta.is-outlined:hover {
+                border: 3px solid palegoldenrod;
             }
 
             .help {
                 color: gray;
             }
+
         </style>
         <script>
             // {% if msg %}
@@ -103,7 +127,7 @@
                 let username = $("#input-username").val()
                 let password = $("#input-password").val()
                 let password2 = $("#input-password2").val()
-                let name = $('#input-nickname').val()
+                let nickname = $('#input-nickname').val()
 
 
                 if ($("#help-id").hasClass("is-danger")) {
@@ -136,12 +160,12 @@
                 } else {
                     $("#help-password2").text("비밀번호가 일치합니다.").removeClass("is-danger").addClass("is-success")
                 }
-                if (name == "") {
-                    $("#help-name").text("닉네임을 입력해주세요.").removeClass("is-safe").addClass("is-danger")
-                    $("#input-name").focus()
+                if (nickname == "") {
+                    $("#help-nickname").text("닉네임을 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                    $("#input-nickname").focus()
                     return;
                 } else {
-                    $("#help-name").text("닉네임이 입력되었습니다.").removeClass("is-danger").addClass("is-success")
+                    $("#help-nickname").text("닉네임이 입력되었습니다.").removeClass("is-danger").addClass("is-success")
                 }
                 $.ajax({
                     type: "POST",
@@ -149,7 +173,7 @@
                     data: {
                         username_give: username,
                         password_give: password,
-                        name_give: nickname
+                        nickname_give: nickname
                     },
                     success: function (response) {
                         alert("회원가입을 축하드립니다!")
@@ -218,10 +242,10 @@
 
     </head>
     <body>
-    <section class="hero is-white">
-        <div class="hero-body has-text-centered" style="padding-bottom:1rem;margin:auto;">
-            <h1 class="title is-sparta">SWEETER</h1>
-            <h3 class="subtitle is-sparta">세상을 달달하게</h3>
+    <section class="section1">
+        <div class="titlebox">
+            <h1 class="title">Today's Youtube Video</h1>
+
         </div>
     </section>
     <section class="section">
@@ -232,11 +256,12 @@
                     <div class="content">
                         <div class="field has-addons">
                             <div class="control has-icons-left" style="width:100%">
-                                <input id="input-username" class="input" type="text" placeholder="아이디">
+                                <input id="input-username" class="input is-small" type="text" placeholder="ID">
                                 <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
                             </div>
+
                             <div id="btn-check-dup" class="control is-hidden">
-                                <button class="button is-sparta" onclick="check_dup()">중복확인</button>
+                                <button class="button is-sparta1 is-small" onclick="check_dup()">중복확인</button>
                             </div>
 
                         </div>
@@ -245,7 +270,7 @@
                         <div class="mb-5 is-hidden" id="nicknamebox">
                             <div class="field">
                                 <div class="control has-icons-left" style="width:100%">
-                                    <input id="input-nickname" class="input" type="text" placeholder="닉네임 입력">
+                                    <input id="input-nickname" class="input is-small" type="text" placeholder="NICKNAME">
                                     <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
                                 </div> <p id="help-nickname" class="help is-hidden">닉네임을 입력해주세요</p>
                             </div>
@@ -253,7 +278,7 @@
 
                         <div class="field">
                             <div class="control has-icons-left">
-                                <input id="input-password" class="input" type="password" placeholder="비밀번호">
+                                <input id="input-password" class="input is-small" type="password" placeholder="PW">
                                 <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
                             </div>
                             <p id="help-password" class="help is-hidden">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도 사용 가능합니다.</p>
@@ -263,13 +288,11 @@
                     </div>
                     <div id="div-sign-in-or-up" class="has-text-centered">
                         <nav class="level is-mobile">
-                            <button class="level-item button is-sparta" onclick="sign_in()">
+                            <button class="level-item button is-sparta " onclick="sign_in()">
                                 로그인
                             </button>
 
                         </nav>
-                        <hr>
-                        <h4 class="mb-3">아직 회원이 아니라면</h4>
                         <nav class="level is-mobile">
 
                             <button class="level-item button is-sparta is-outlined"
@@ -283,8 +306,8 @@
                         <div class="mb-5">
                             <div class="field">
                                 <div class="control has-icons-left" style="width:100%">
-                                    <input id="input-password2" class="input" type="password"
-                                           placeholder="비밀번호 재입력">
+                                    <input id="input-password2" class="input is-small" type="password"
+                                           placeholder="RE-ENTER PW">
                                     <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
                                 </div>
                                 <p id="help-password2" class="help is-hidden">비밀번호를 다시 한 번 입력해주세요.</p>
