--- a/new/index.html
+++ b/new/index.html
@@ -231,6 +231,8 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ video.nickname }}</h5>
                             <p class="card-text">{{ video.comment }}</p>
+                            <p class="card-emoticon">{{ video.emoticon }}</p>
+
                             {#                                <button onclick="window.location.href = '/post_page'" class="button is-sparta" id="logout-btn" style="float: right">댓글</button>#}
                         </div>
                     </div>
